<resources>
    <string name="app_name">InSOrma</string>

    <string name="email_placeholder">Your email address</string>
    <string name="password_placeholder">Your password</string>
    <string name="username_placeholder">Your username</string>
    <string name="phone_placeholder">Your phone number</string>

    <string name="login_btn">Login</string>
    <string name="new_account_btn">Create a new account</string>

    <string name="menu_home_item">Home</string>
    <string name="menu_transaction_item">Transaction History</string>
    <string name="menu_profile_item">Profile</string>

    <string name="no_transactions">No transactions history found</string>
    <string name="no_products">No products found</string>
    <string name="product_detail_btn">Open details</string>
    <string name="buy_btn">Buy furniture</string>
    <string name="product_quantity_field">Product quantity</string>

    <string name="product_price_hint">PRODUCT_PRICE</string>
    <string name="product_rating_hint">PRODUCT_RATING</string>
    <string name="product_name_hint">PRODUCT_NAME</string>
    <string name="product_total_price_hint">TOTAL_PRICE</string>
    <string name="product_quantity_hint">PRODUCT_QUANTITY</string>
    <string name="product_purchase_date_hint">PURCHASE_DATE</string>

    <string name="user_email_hint">USER_EMAIL</string>
    <string name="user_username_hint">USER_USERNAME</string>
    <string name="user_phone_hint">USER_PHONE</string>

    <string name="email_address_label">Email address</string>
    <string name="username_label">Username</string>
    <string name="phone_number_label">Phone number</string>

    <string name="logout_btn">Logout</string>
    <string name="edit_profile_btn">Edit profile</string>
    <string name="delete_account_btn">Delete Account</string>
    <string name="save_change_btn">Save Change</string>

</resources>