<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address_label"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email_hint"
            android:textColor="@color/primary"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/email_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/username_label"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/username"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/email_label"
            app:layout_constraintTop_toBottomOf="@+id/email_label" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_username_hint"
            android:textColor="@color/primary"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/email_address"
            app:layout_constraintTop_toBottomOf="@+id/email_address" />

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/username_placeholder"
            android:inputType="text"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.021"
            app:layout_constraintStart_toStartOf="@+id/email_address"
            app:layout_constraintTop_toBottomOf="@+id/email_address" />

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phone_number_label"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/phone"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/username_label"
            app:layout_constraintTop_toBottomOf="@+id/username_label" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_phone_hint"
            android:textColor="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        app:layout_constraintBottom_toTopOf="@+id/delete_account_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        android:orientation="vertical">

        <Button
            android:id="@+id/edit_profile_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_btn"
            android:visibility="visible" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_change_btn"
            android:backgroundTint="@color/success"
            android:visibility="gone" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_btn"
            android:textColor="@color/danger"
            app:strokeColor="@color/danger"
            app:strokeWidth="2dp"
            style="?attr/materialButtonOutlinedStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/delete_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="90dp"
        android:backgroundTint="@color/danger"
        android:layout_marginBottom="30dp"
        android:text="@string/delete_account_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>