<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/input"
    android:padding="8dp">

    <TextView
        android:id="@+id/transaction_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TRANSACTION_ID"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/product_name_hint"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/purchase_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/transaction_id"
        app:layout_constraintTop_toBottomOf="@+id/transaction_id" />

    <TextView
        android:id="@+id/product_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/product_quantity_hint"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/purchase_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/product_name"
        app:layout_constraintTop_toBottomOf="@+id/product_name" />

    <TextView
        android:id="@+id/product_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/product_total_price_hint"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/purchase_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/product_quantity"
        app:layout_constraintTop_toBottomOf="@+id/product_quantity"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/purchase_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/product_purchase_date_hint"
        android:textColor="@color/primary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/transaction_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>